--- a/.luarc.json
+++ b/.luarc.json
@@ -46,7 +46,7 @@
    "space_around_concat_operator": "none",
    "space_around_logical_operator": "false",
    "space_around_assign_operator": "false",
-   "align_call_args": "true",
+   "align_call_args": "false",
    "align_function_params": "true",
    "align_continuous_assign_statement": "true",
    "align_continuous_rect_table_field": "true",
